Finished the skeletal part of my project

--- a/index.html
+++ b/index.html
@@ -15,5 +15,31 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="sedans">
+            <img src="images/icon-sedans.svg" alt="">
+            <h2>SEDANS</h2>
+            <p>Choose a sedan for its affordability and excellent fuel economy. 
+               Ideal for cruising in the city or on your next road trip.
+            </p>
+            <button><a href="#">Learn More</a></button>
+        </div>
+        <div class="suvs">
+            <img src="images/icon-suvs.svg" alt="">
+            <h2>SUVS</h2>
+            <p>Take a SUV for its spacious interior, power and versatility. 
+                Perfect for your next family vaction and off-road adventures.
+            </p>
+            <button><a href="#">Learn More</a></button>
+        </div>
+        <div class="luxury">
+            <img src="images/icon-luxury.svg" alt="">
+            <h2>LUXURY</h2>
+            <p>Cruise in the best car brands without the bloated prices.
+                Enjoy the enhances comfort of a luxury rental and arrive in style.
+            </p>
+            <button><a href="#">Learn More</a></button>
+        </div>
+    </main>
 </body>
 </html>
