--- a/grid.html
+++ b/grid.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Grid Layout</title>
+    <link rel="stylesheet" href="grid.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar">
+            <ul class="navlinks">
+                <li><a href="index.html">Flexbox</a></li>
+                <li><a href="grid.html">Grid</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <div class="grid-container">
+            <div class="item1">red</div>
+            <div class="item2">yellow</div>
+            <div class="item3">green</div>
+            <div class="item4">blue</div>
+            <div class="item5">blue</div>
+        </div>
+    </main>
 </body>
 </html>
